--- a/myDashboard/Pipfile
+++ b/myDashboard/Pipfile
@@ -15,5 +15,6 @@ python_version = "3.9"
 
 [scripts]
 start = "python manage.py runserver"
+devstart = "python manage.py tailwind start"
 build = "python manage.py tailwind build"
 collect = "python manage.py collectstaticd"
